# gorganizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  cleaner.sh  go.mod  go.sum  gorganizer.sh  install.sh  uninstall.sh
.github/workflows/: release.yml
api/proto/: gorganizer.proto
cmd/gorganizerctl/: main.go  transfer.go
cmd/gorganizerd/: main.go  singleton.go
cmd/runtime-probe/: main.go
cmd/vfs-smoke/: main.go
docs/: backend-architecture.md
internal/atomicfile/: atomic.go  atomic_test.go
internal/config/: config.go  config_test.go  errors.go  game_settings.go  game_settings_golden_test.go  paths.go
internal/daemon/: archives.go  daemon.go  errors.go  executables.go  executables_catalog_test.go  fnv4gb.go  games.go  ini_service.go  install.go  launch.go  loot_sync.go  loot_sync_test.go  managed_tools.go  mods.go  nexus_adapter.go  plugin_loadout_test.go  plugin_status.go  prefix_runtime.go  preview_cache.go  preview_cache_test.go  profiles.go  recover_test.go  recovery.go  script_extender.go  script_extender_test.go  separators.go  session.go  settings.go  status_coalescer.go  streams.go  tool_output.go  tool_output_test.go  tool_runtime.go  transfer_service.go  ttw.go  ttw_ipc.go  vfs_service.go
internal/download/: downloader.go  downloads_index.go  errors.go  fomod_info.go  install.go  installer.go  installer_test.go  ledger.go  nexus.go  nxm.go  nxm_test.go  serializer_golden_test.go
internal/dto/: dto.go  transfer.go
internal/fsutil/: fsutil.go
internal/game/: bethesda.go  bethesda_test.go  consistency_test.go  game.go
internal/gamedef/: consistency_test.go  gamedef.go  gamedef_test.go  registry.go
internal/ini/: editor.go  editor_test.go  manager.go  paths.go  paths_test.go  templates.go  tweaks.go
internal/ipc/: enums_test.go  errmap.go  errmap_test.go  errors.go  handlers.go  handlers_test.go  handlers_transfer.go  server.go
internal/kvfile/: kvfile_test.go  read.go  write.go
internal/mod/: conflict.go  conflict_test.go  errors.go  mod.go  modlist.go  modlist_test.go
internal/plugins/: deps.go  deps_test.go  header.go  header_cache.go  header_test.go  loadout_test.go  plugins.go  softdeps.go  softdeps_test.go
internal/profile/: profile.go  profile_test.go
internal/separators/: golden_test.go  separators.go  separators_test.go
internal/steam/: errors.go  root.go  root_test.go  vdf.go  vdf_test.go
internal/tools/: errors.go  executables_registry.go  executables_registry_test.go  loot_workspace.go  loot_workspace_test.go  managed_loot.go  managed_loot_test.go  proton.go  proton_external.go  proton_test.go  skse_runtime.go  skse_runtime_test.go  tools.go  tools_test.go  ttw_helpers.go
internal/transfer/: collision_test.go  compression_test.go  errors.go  export.go  import.go  manifest.go  manifest_test.go  security_test.go  tarstream.go  transfer_test.go
internal/vfs/: casefold.go  casefold_test.go  errors.go  intent_recover_test.go  materialize.go  materialize_test.go  mount.go  mount_linux.go  mount_test.go  recover.go  recover_test.go  rematerialize_test.go  root_deployment.go  root_deployment_test.go  sentinel.go  sentinel_test.go  tree.go  tree_test.go  walk.go
resources/: themes.qrc
resources/themes/: dracula.qss  gruvbox-dark.qss  light.qss  monokai.qss  nord.qss  one-dark.qss  solarized-dark.qss
scripts/: gorganizer-launcher.in
src/: CMakeLists.txt  main.cpp
src/core/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  DirectoryManager.cpp  DirectoryManager.h  GameDetector.cpp  GameDetector.h  GameInfo.cpp  GameInfo.h  ModCatalog.cpp  ModCatalog.h  PluginScanner.cpp  PluginScanner.h  VdfParser.cpp  VdfParser.h
src/grpc/: CMakeLists.txt  GrpcClient.cpp  GrpcClient.h  GrpcDeadline.h  GrpcTypes.cpp  GrpcTypes.h  GrpcWorker.cpp  GrpcWorker.h
src/ui/: ActivityLogPanel.cpp  ActivityLogPanel.h  CMakeLists.txt  ConnectionIndicator.cpp  ConnectionIndicator.h  Dialogs.cpp  Dialogs.h  DownloadProgressWidget.cpp  DownloadProgressWidget.h  DownloadsLibraryView.cpp  DownloadsLibraryView.h  DownloadsModel.cpp  DownloadsModel.h  DownloadsRowDelegate.cpp  DownloadsRowDelegate.h  ExecutablesDialog.cpp  ExecutablesDialog.h  ExportDialog.cpp  ExportDialog.h  FalloutPatchController.cpp  FalloutPatchController.h  FomodInstallerDialog.cpp  FomodInstallerDialog.h  FomodPlan.cpp  FomodPlan.h  GameSelectorWidget.cpp  GameSelectorWidget.h  GameSetupController.cpp  GameSetupController.h  ImportDialog.cpp  ImportDialog.h  IniEditorDialog.cpp  IniEditorDialog.h  InstallStatusBanner.cpp  InstallStatusBanner.h  InstallWorker.cpp  InstallWorker.h  LaunchController.cpp  LaunchController.h  MainWindow.cpp  (+36 more)
(+4 files in other folders)
